@@ -1,3 +1,15 @@
+2013-11-25  Robert Hogan  <robert@webkit.org>
+
+        Remove code now unnecessary after r159575
+        https://bugs.webkit.org/show_bug.cgi?id=124809
+
+        Reviewed by Antti Koivisto.
+
+        Covered by existing tests fast/block/margin-collapse/self-collapsing-block-with-float*
+
+        * rendering/line/LineBreaker.cpp:
+        (WebCore::LineBreaker::skipLeadingWhitespace):
+
 2013-11-25  Laszlo Vidacs  <lac@inf.u-szeged.hu>
 
         Vertical border spacing is doubled between table row groups
